# skroli

./: .gitignore  README.md  ROADMAP.md  SPECS.md  pyproject.toml  skroli.config.toml
design/: ingestors-tab.html  viewer-home.html
skroli/: addons_base.py  cli.py  config.py  fetcher.py  models.py  pipeline.py  storage.py  stream.py
skroli/addons/: __init__.py  engagement_enhancer.py  hn_ingestor.py  rss_ingestor.py  score_enhancer.py  skroli_viewer.py
skroli_app/: __init__.py  addons_base.py  cli.py  config.py  models.py
skroli_app/core/: addons_base.py  config.py  fetcher.py  pipeline.py  reddit.py  registry.py  storage.py
skroli_app/enhancers/engagement/: __init__.py  config.py  enhancer.py
skroli_app/enhancers/score/: __init__.py  config.py  enhancer.py
skroli_app/ingestors/hackernews/: __init__.py  config.py  ingestor.py
skroli_app/ingestors/images/: __init__.py  config.py  ingestor.py
skroli_app/ingestors/rss/: __init__.py  config.py  ingestor.py
skroli_app/viewer/: native_shell.py  reader.py  viewer.py
skroli_app/viewer/assets/: app.css  app.js  feed-worker.js  index.html
