[project]
name = "skroli"
version = "0.0.1"
description = "Your custom local internet algorithm. Simple, as it should be."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
# Zero runtime dependencies — 0.0.1 runs on the Python standard library alone.
dependencies = []

[project.optional-dependencies]
# Native desktop window instead of opening a browser tab.
desktop = ["pywebview>=5.0"]

[project.scripts]
skroli = "skroli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skroli*"]

[tool.setuptools.package-data]
skroli = ["assets/*"]
