[project]
name = "skroli"
version = "0.0.1"
description = "Your custom local internet algorithm. Simple, as it should be."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
# Zero runtime dependencies — 0.0.1 runs on the Python standard library alone.
dependencies = []

[project.optional-dependencies]
# Lightweight native window (single web view) instead of a browser tab.
desktop = ["pywebview>=5.0"]
# Full cross-platform native shell: real OS window + native browser-style tabs.
# On macOS, pyobjc lets us inset the title bar so the real traffic-light buttons
# share the tab row (Chrome-style single-row chrome).
native = [
  "PySide6>=6.6",
  "pyobjc-framework-Cocoa>=9.0; sys_platform=='darwin'",
]

[project.scripts]
skroli = "skroli_app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skroli_app*"]

[tool.setuptools.package-data]
"skroli_app.viewer" = ["assets/*"]
